--- a/rov/templates/rov/cards/hdop_pdop_vdop_card.html
+++ b/rov/templates/rov/cards/hdop_pdop_vdop_card.html
@@ -1,12 +1,13 @@
-<div class="card shadow">
+<div class="card shadow mt-2 qc-card" id="hdop-qc-card">
     <div class="card-header bg-primary text-white p-0 clearfix">
-       <h6 class="ms-2 mt-1 mb-1 float-start"><i class="fas fa-location me-2 "></i> GNSS-QC</h6>
-       <button type="button" class="btn btn-sm mt-1 mb-1 text-white float-end me-2" id="gnss-qc-min-max-btn">
-           <i class="fas fa-window-minimize" id="gnss-qc-toggle-icon"></i>
+       <h6 class="ms-2 mt-1 mb-1 float-start"><i class="fas fa-location me-2 "></i> HDOP</h6>
+       <button type="button" class="btn btn-close mt-1 me-2 float-end"></button>
+        <button type="button" class="btn btn-sm mt-1 mb-1 text-white float-end me-2" id="hdop-qc-min-max-btn">
+           <i class="fas fa-window-minimize" id="hdop-qc-toggle-icon"></i>
        </button>
     </div>
-    <div class="card-body" id="gnss-qc-card-body">
-        <div id="gnss-qc-plot" class="w-100" style="height: 70vh">
+    <div class="card-body" id="hdop-qc-card-body">
+        <div id="gnss-hdop-plot" class="w-100" style="height: 30vh">
 
         </div>
     </div>
