--- a/rov/templates/rov/partials/rec_db_statistics.html
+++ b/rov/templates/rov/partials/rec_db_statistics.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<h6 class="fw-bold mt-4">Processed (REC-DB)</h6>
+            <div class="table-scroll" style="height: 12vh">
+            <table class="table table-sm table-striped table-hover">
+                <tr><th>PROC Lines</th><td>{{ r.ProcLines }}</td></tr>
+                <tr><th>PROC Stations</th><td>{{ r.ProcStations }}</td></tr>
+                <tr><th>PROC Nodes</th><td>{{ r.ProcNodes }}</td></tr>
+            </table>
+            </div>
