--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!doctype html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,10 +10,13 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="{% static 'css/site.css' %}">
   <link rel="stylesheet" href="{% static 'baseproject/css/app.css' %}">
+  <link rel="stylesheet" href="{% static 'baseproject/css/black_box_config_modal.css' %}">
+  <link rel="stylesheet" href="{% static 'baseproject/css/rov_upload_modal.css' %}">
+ <link rel="stylesheet" href="{% static 'baseproject/css/side_bar_menu.css' %}">
   <link href="https://cdn.bokeh.org/bokeh/release/bokeh-3.8.2.min.css" rel="stylesheet">
   {% block extra_head %}{% endblock %}
 </head>
-<body class="bg-light">
+<body class="bg-dark">
 
   {% include "_navbar.html" %}
 
