--- a/rov/templates/rov/cards/cog_hdg_qc_card.html
+++ b/rov/templates/rov/cards/cog_hdg_qc_card.html
@@ -1,14 +1,14 @@
-<div class="card shadow p-1 qc-card" id="depth-comparison-card">
+<div class="card shadow p-1 qc-card" id="hdg-cog-card">
     <div class="card-header bg-primary text-white p-0 clearfix">
-       <h6 class="ms-2 mt-2 float-start"><i class="fas fa-bath me-2 "></i> DEPTHS COMPARISON</h6>
+       <h6 class="ms-2 mt-2 float-start"><i class="fas fa-bath me-2 "></i> HEADING VS COURSE OVER GROUND (COG)</h6>
        <button type="button" class="btn btn-close mt-1 me-2 float-end"></button>
-        <button type="button" class="btn btn-sm mt-1 mb-1 float-end me-2" id="depth-qc-min-max-btn">
-           <i class="fas fa-window-minimize" id="rov-depth-toggle-icon"></i>
+        <button type="button" class="btn btn-sm mt-1 mb-1 float-end me-2" id="hdg-cog-min-max-btn">
+           <i class="fas fa-window-minimize" id="hdg-cog-toggle-icon"></i>
        </button>
 
     </div>
-    <div class="card-body" id="rov-depth-qc-card-body">
-        <div id="rov-depth-qc-plot" class="w-100" style="height: 70vh">
+    <div class="card-body" id="hdg-cog-card-body">
+        <div id="hdg-cog-plot" class="w-100" style="height: 70vh">
 
         </div>
     </div>
