--- a/rov/templates/rov/cards/vessel_sog_card.html
+++ b/rov/templates/rov/cards/vessel_sog_card.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<div class="card shadow qc-card" id="vessel-sog-card">
+    <div class="card-header bg-success text-white p-0 clearfix">
+       <h6 class="ms-2 mt-1 mb-1 float-start"><i class="fas fa-ship me-2 "></i> VESSEL/ROV SPEED OVER GROUND</h6>
+       <button type="button" class="btn btn-close mt-1 me-2 float-end"></button>
+        <button type="button" class="btn btn-sm mt-1 mb-1 text-white float-end me-2" id="vessel-sog-min-max-btn">
+           <i class="fas fa-window-minimize" id="vessel-sog-toggle-icon"></i>
+       </button>
+    </div>
+    <div class="card-body" id="vessel-sog-card-body">
+        <div id="vessel-sog-plot" class="w-100" style="height: 40vh">
+
+        </div>
+    </div>
+</div>
